# Finance-Data-Scraper

./: .env  .gitignore  README.md  StocksDemo.ipynb  docker-compose.yml  pyproject.toml  test.ipynb
.github/workflows/: publish_docker_test.yml  publish_on_docker_hub.yml  publish_on_pipy.yml  python-publish-test.yml
demo/: demo.ipynb
docker/server/: Dockerfile  test.py
news/: rss-feeds.json
src/: Config.py  ExecutionContext.py  TickerRepository.py  YFDataProvider.py  server.py  workflow.py
src/Stocks/: Dockerfile  ExecutionContext.py  InfluxClient.py  QuestClient.py  TickerRepository.py  YFDataProvider.py  requirements.txt  server.py  workflow.py
src/Stocks/model/: Intervals.py  Ticker.py
src/news/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/news/src/finance_news_scraper/: __main__.py  mongo_client.py  news_sources.py  sentiment.py
src/news/src/tests/: test_mongo_db_client.py
src/stocks/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/stocks/src/finance_stock_scraper/: ExecutionContext.py  QuestClient.py  TickerRepository.py  YFDataProvider.py  __main__.py  workflow.py
tickers/: EUREX.csv  downlaod_nasdaq.py  download_Financial_Markets_UK.py  download_eurex.py  download_helper.py  nasdaq.csv  nasdaqlisted.txt  otherlisted.txt
