[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance_news_scraper"
version = "0.0.1"
authors = [
  { name="Lukas Kreussel"},
]
description = "Collect, store and access finance news locally"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
  "pytz",
  "pandas",
  "numpy",
  "requests",
  "tqdm",
  "pymongo",
  "transformers[torch]",
  "beautifulsoup4",
  "newspaper3k",
  "dateparser",
  "cchardet",
  "google-news-feed>=1.0.0"
]
    
[project.urls]
"Homepage" = "https://github.com/LLukas22/Finance-Data-Scraper"
"Bug Tracker" = "https://github.com/LLukas22/Finance-Data-Scraper/issues"