[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_news_scraper"
dynamic = ["version"]
authors = [
  { name="Lukas Kreussel"},
]
description = "Collect, store and access finance news locally"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
  "pytz>=2022.1",
  "pandas>=1.4.2",
  "numpy>=1.22.3",
  "requests>=2.28.1",
  "tqdm>=4.64.0",
  "pymongo>=4.2.0",
  "transformers[torch]>=4.19.4",
  "beautifulsoup4>=4.11.1",
  "newspaper3k>=0.2.8",
  "dateparser>=1.1.1",
  "cchardet>=2.1.7",
  "google-news-feed>=1.0.0"
]
    
[project.urls]
"Homepage" = "https://github.com/LLukas22/Finance-Data-Scraper"
"Bug Tracker" = "https://github.com/LLukas22/Finance-Data-Scraper/issues"