[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_stock_scraper"
dynamic = ["version"]
authors = [
  { name="Lukas Kreussel"},
]
description = "Collect, store and access stock exchange data locally"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
    "pytz>=2022.1",
    "pandas>=1.4.2",
    "yfinance>=0.1.70",
    "questdb>=1.0.0",
    "requests>=2.28.1",
    "pandas-market-calendars>=3.4",
    "tqdm>=4.64.0"
]
    
[project.urls]
"Homepage" = "https://github.com/LLukas22/Finance-Data-Scraper"
"Bug Tracker" = "https://github.com/LLukas22/Finance-Data-Scraper/issues"